--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.l3onidcleancoder.mikolassmslistener">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-        
+
+        <receiver android:name=".smslistener.SmsListener">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
         <activity
-            android:name=".ui.settings.SettingsActivity" >
+            android:name=".ui.settings.SettingsStartActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+
+        <activity
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:name=".ui.settings.NewSettingsActivity" >
+        </activity>
+
+        <activity
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:name=".ui.settings.OldSettingsActivity" >
         </activity>
 
     </application>
